[bisected, regression] Intermittent freezes (flip_done timed out) since 5.10.21 on 4800H/RX 5600M (Dell G5 SE)
Brief summary of the problem:
Running Ubuntu (GNOME) normally on any kernel since v5.10.21 eventually causes a graphics freeze on this system, with messages showing “flip_done timed out” if one manages to switch to a TTY (which takes a long time/doesn’t always work; not sure if version-dependent). This can happen after some time of normal desktop use or even already at the login screen. Sometimes, lspci -k
can also trigger a freeze (not sure if this depends on version or X.org vs. Wayland).
The last version that does not have any issues is v5.10.20. Any newer kernel version I’ve tried also exhibits freezes, although it’s possible that I might have missed some in between. I’ve observed the problem on different versions of 5.11, 5.12, 5.13, and now 5.14, as well as on other distributions (e.g. Fedora 34).
Update: I have done a bisection and found that commit 0b6383a9a80acb08768da7d15370f4ad6456baba introduced the issue in the 5.10 line (introduced as 907830b0fc9e374d00f3c83de5e426157b482c01 for v5.12).
Hardware description:
- CPU: Ryzen 7 4800H
- GPU: Radeon RX 5600M
- System Memory: 16 GiB
- Display(s): laptop integrated screen
- Type of Diplay Connection: eDP
System information:
- Distro name and Version: Ubuntu 21.04
- Kernel version: kernels v5.10.21 and up
- Custom kernel: no
- AMD package version: No package
How to reproduce the issue:
Unfortunately, I have not found a way to deterministically reproduce the issue. This also makes testing rather difficult. At least, having the freeze occur once confirms a version as bad, which usually does not take too long.
- Boot the system on one of the affected kernels (e. g. v5.10.21).
- Log into a GNOME session (note: the issue does occasionally happen already on the login screen).
- Actively use the graphical session (e. g. opening/closing windows, running
lspci -k
, …) - The screen will freeze at some point, requiring a reboot (usually, this is possible using e. g. SysRq-B).